# ParMmg

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.md  codecov.yml  sonar-project.properties
.github/workflows/: long-tests.yml  main-job.yml
cmake/modules/: FindMETIS.cmake  FindMMG.cmake  FindMetis.cmake  FindMmg.cmake  FindPARMETIS.cmake  FindParmetis.cmake  ParMmgConfig.cmake.in  macros.cmake  optional-dependencies.cmake
cmake/testing/: pmmg_tests.cmake
dependencies/: mmg-973feec.tgz
doc/doxygen/: Doxyfile.in
libexamples/adaptation_example0/: README.md  cube-solphys.sol  cube_in.0.mesh  cube_in.0.mesh_parFaces  cube_in.0.mesh_parNodes  cube_in.1.mesh  cube_in.1.mesh_parFaces  cube_in.1.mesh_parNodes  cube_in.2.mesh  cube_in.2.mesh_parFaces  cube_in.2.mesh_parNodes  cube_in.3.mesh  cube_in.3.mesh_parFaces  cube_in.3.mesh_parNodes  cube_in_faces.0.mesh  cube_in_faces.1.mesh  cube_in_faces.2.mesh  cube_in_faces.3.mesh  cube_in_nodes.0.mesh  cube_in_nodes.1.mesh  cube_in_nodes.2.mesh  cube_in_nodes.3.mesh
libexamples/adaptation_example0/parallel_IO/automatic_IO/: main.c
libexamples/adaptation_example0/parallel_IO/external_IO/: gen_distributedMesh.c  main.c
libexamples/adaptation_example0/parallel_IO/manual_IO/: main.c  opnbdy.c
libexamples/adaptation_example0/parallel_IO/manual_IO/opnbdy/: cube-P0.mesh  cube-P1.mesh  cube.mesh
libexamples/adaptation_example0/sequential_IO/automatic_IO/: main.F90  main.c  main.cpp
libexamples/adaptation_example0/sequential_IO/localization/: main.c
libexamples/adaptation_example0/sequential_IO/manual_IO/: main.c
libexamples/adaptation_example1/: brickLS.0.mesh  brickLS.1.mesh  brickLS.2.mesh  brickLS.3.mesh  main.c  wave.0.mesh  wave.1.mesh  wave.2.mesh  wave.3.mesh
scripts/: AddressSanitizer_ompi_suppr.txt  genfort.pl  genheader.c  git_log_pmmg.sh
src/: .vimrc  API_functions.c  API_functions_pmmg.c  API_functionsf.c  API_functionsf_pmmg.c  PROctree_pmmg.c  analys_pmmg.c  barycoord_pmmg.c  barycoord_pmmg.h  boulep_pmmg.c  chkcomm_pmmg.c  chkmesh.c  chkmesh.h  chkmesh_pmmg.c  chkmesh_pmmg.h  communicators_pmmg.c  coorcell_pmmg.c  coorcell_pmmg.h  debug_pmmg.c  debug_pmmg.h  distributegrps_pmmg.c  distributemesh.c  distributemesh_pmmg.c  free_pmmg.c  grpsplit.c  grpsplit.h  grpsplit_pmmg.c  grpsplit_pmmg.h  hash_pmmg.c  hdf_pmmg.h  inout_3d.c  inout_pmmg.c  inoutcpp_pmmg.cpp  interactionmap_pmmg.c  interpmesh_pmmg.c  interpmesh_pmmg.h  isovalue_pmmg.c  libparmmg.c  libparmmg.h  libparmmg1.c  (+39 more)
